--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Genre-Based Pedagogical Translanguaging</title>
+  <title>Genre Translanguaging</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta
     name="description"
@@ -531,14 +531,14 @@
       <p class="section-lead">
         Together with <strong>Dr. Andrés Ramírez</strong> (Florida Atlantic University),
         we have designed and implemented a
-        <strong>Genre-Based Pedagogical Translanguaging (GBPT)</strong> approach for
+        <strong>Genre Translanguaging (GBPT)</strong> approach for
         foreign language education. All materials were created by
-        <strong>Yuly Andrea González</strong> as a practicing teacher in a public school
+        <strong>Yuly Andrea González </strong> as a practicing teacher in a public school
         in Bogotá, in dialogue with classroom realities and community needs.
       </p>
 
       <p class="section-lead">
-        To date, we have implemented <strong>more than 17 teaching cycles</strong>,
+        To date, we have implemented <strong>more than 20 teaching cycles</strong>,
         all aligned with the thematic contents of
         <em>Colombia’s suggested curriculum for English language teaching</em>.
         This page organizes the most relevant resources in three main categories:
