--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta
     name="description"
-    content="Repository of resources on Genre-Based Pedagogical Translanguaging by Yuly Andrea González and Dr. Andrés Ramírez."
+    content="Repository of resources on Genre Translanguaging by Andrés Ramírez & Yuly Andrea González."
   />
   <style>
     :root {
@@ -445,7 +445,7 @@
     <nav class="nav">
       <div class="brand">
         <div class="brand-logo">GB</div>
-        <span>Genre-Based Pedagogical Translanguaging</span>
+        <span>Genre Translanguaging</span>
       </div>
       <div class="nav-links">
         <a href="#about">About</a>
@@ -462,7 +462,7 @@
         <div class="hero-tag">
           <span>Translanguaging Pedagogy</span>
         </div>
-        <h1>Genre-Based Pedagogical Translanguaging</h1>
+        <h1>Genre Translanguaging</h1>
         <p class="hero-subtitle">
           A living repository of resources co-created by
           <strong>Yuly Andrea González</strong> (Colombia) and
@@ -773,7 +773,7 @@
 
   <footer>
     <div class="footer-inner">
-      <span>© <span id="year"></span> Genre-Based Pedagogical Translanguaging.</span>
+      <span>© <span id="year"></span> Genre Translanguaging.</span>
       <span>Designed from classroom practice · Bogotá, Colombia &amp; Boca Raton, USA.</span>
     </div>
   </footer>
